feat:implement team_ranking API
